--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Looking Dreams</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <!-- <header>
         <img>
@@ -40,8 +45,42 @@
                 </div>
             </div>
         </section>
+        <section class="sectionInfo">
+            <div class="cnt-Info">
+                <h2 class="titleInfo">Descubre Oportunidades en Estados Unidos: Evento para Inversores y Profesionales
+                </h2>
+                <p class="textInfo">Este será un espacio idóneo para resolver tus dudas, entender los requisitos y
+                    procesos detallados y, lo más importante, para comenzar a trazar tu propio sendero hacia una vida
+                    plena en Estados Unidos.</p>
+            </div>
+            <div class="cnt-cajas">
+                <div class="caja1 caja">
+                    <p class="titleCaja">Para quién es este evento:</p>
+                    <ol>
+                        <li><i class="bi bi-check-circle-fill"></i>Inversores</li>
+                        <li><i class="bi bi-check-circle-fill"></i>Profesionales cualificados</li>
+                    </ol>
+                </div>
+                <div class="caja2 caja">
+                    <p class="titleCaja" >Temas a tratar:</p>
+                    <ol>
+                        <li><i class="bi bi-check-circle-fill"></i>Residencia en EE.UU.</li>
+                        <li><i class="bi bi-check-circle-fill"></i>Oportunidades de inversión en EE.UU.</li>
+                        <li><i class="bi bi-check-circle-fill"></i>VISA E-2</li>
+                        <li><i class="bi bi-check-circle-fill"></i>VISA EB2/NIW</li>
+                    </ol>
+                </div>
+            </div>
+            <div class="cnt-btn">
+                <button class="btn-one">Reserva tu cupo</button>
+            </div>
+        </section>
     </main>
 
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
