se crea card de perfiles y seccion de ubicacion

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <section class="sectionOne">
             <div class="cnt-general">
-                <h1 class="titleH1">Haz realidad tu inversión en Estados Unidos: Visas E2 y EB2-NIW te guían</h1>
+                <h1 class="titleH1">Haz realidad tu inversión en Estados Unidos: Visas E2 y EB2-NIW</h1>
             </div>
         </section>
         <section class="conteo">
@@ -62,7 +62,7 @@
                     </ol>
                 </div>
                 <div class="caja2 caja">
-                    <p class="titleCaja" >Temas a tratar:</p>
+                    <p class="titleCaja">Temas a tratar:</p>
                     <ol>
                         <li><i class="bi bi-check-circle-fill"></i>Residencia en EE.UU.</li>
                         <li><i class="bi bi-check-circle-fill"></i>Oportunidades de inversión en EE.UU.</li>
@@ -73,6 +73,108 @@
             </div>
             <div class="cnt-btn">
                 <button class="btn-one">Reserva tu cupo</button>
+            </div>
+        </section>
+        <section>
+            <h2 class="titlePerfil">Conoce a Nuestros Speakers</h2>
+        </section>
+        <section class="sectionPerfil">
+            <div class="cnt-general-perfil">
+                <div class="cnt-fotoPerfil">
+                    <img class="fotoPerfil" src="./img/carlos.webp">
+                </div>
+                <div class="cnt-text-perfil">
+                    <p class="nombrePersona">Carlos Murcia</p>
+                    <p class="textPerson">CEO Puff Cleaning & Repair</p>
+                    <p class="textPerson">Innovador y reconocido Empresario Colombiano</p>
+                    <p class="textPerson">Inversor en USA con la Visa E2</p>
+                </div>
+                <div>
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                    Perfil
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Carlos Murcia, emprendedor visionario en la vanguardia de los negocios digitales y
+                                    la tecnología. Fundó Puff Cleaning and Repair Holdings LLC, liderando el mercado con
+                                    soluciones digitales innovadoras y es el General Manager de FLO CAR RENTAL, donde su
+                                    enfoque en la satisfacción del cliente a través de plataformas digitales brilla en
+                                    la industria automotriz. Formado en administración y finanzas por la Universidad
+                                    Politécnico Gran Colombiano, ha dedicado su carrera a la mejora de servicios con
+                                    tecnología. Recientemente, su talento lo llevó a EE.UU., donde obtuvo la visa E2 por
+                                    sus proyectos disruptivos. Con un don para captar oportunidades y desarrollar
+                                    estrategias de negocio, atrae a inversores latinoamericanos interesados en expandir
+                                    sus franquicias en EE.UU.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="sectionPerfil">
+            <div class="cnt-general-perfil">
+                <div class="cnt-fotoPerfil">
+                    <img class="fotoPerfil" src="./img/adriana.webp">
+                </div>
+                <div class="cnt-text-perfil">
+                    <p class="nombrePersona">Adriana Soto Ospina</p>
+                    <p class="textPerson">CEO de Maternal | VisaHub</p>
+                    <p class="textPerson">Psicóloga, Terapeuta Ocupacional, MBA</p>
+                    <p class="textPerson">Visa EB2-NIW por Auto Petición</p>
+                </div>
+                <div>
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Perfil
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Adriana Soto Ospina, Emprendedora Colombiana en el ámbito de los negocios digitales
+                                    y telesalud, es la fundadora de Maternal+ empresa que se dedica a ayudar a mujeres
+                                    latinas a mejorar los resultados del embarazo y el posparto, disminuyendo costos al
+                                    sistema de salud y es la CEO de VisaHub.
+                                    Emigró a Estados Unidos hace 2 años y logró aplicar y ser aprobada para la visa
+                                    EB2-NIW utilizando el mismo emprendimiento que inició en Colombia, todo ello sin el
+                                    apoyo legal de ningún abogado, su empresa en poco tiempo ha ganado reconocimiento de
+                                    parte de inversores de diversas industrias en USA, actualmente opera en Texas y
+                                    California, estableciendo convenios con entidades privadas y gubernamentales de
+                                    Estados Unidos. Ahora, con VisaHub, apuesta por democratizar el acceso a la
+                                    migración profesional para los latinos en USA, por menos de una tercera parte de los
+                                    que cuesta con un abogado.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="cnt-ubicacion">
+                <h2 class="titleH2Ubicacion">Ubicación y Horario del Evento</h2>
+                <h2 class="nameUbica">Invierte y reside en Estados Unidos ¡Descubre el camino a través de
+                    las visas E2 y EB2-NIW!</h2>
+                <p><span class="spanUbica">FECHA DEL EVENTO: </span>miércoles 3 de abril</p>
+                <p><span class="spanUbica">HORA DEL EVENTO: </span>18:00 p.m. 20:30 p.m.</p>
+                <p><span class="spanUbica">LUGAR DEL EVENTO: </span>Hotel Estelar la Fontana</p>
+
+            </div>
+            <div class="cnt-map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.3758362446183!2d-74.04615942418668!3d4.704601541622012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9ab2e9565caf%3A0x10d0ddf59c02d2e1!2sESTELAR%20La%20Fontana%20Hotel!5e0!3m2!1sen!2sco!4v1710860314712!5m2!1sen!2sco"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
     </main>
