se ajustan cosas adicionales despues de la entrega

--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
                     <h2 class="titleH2Ubicacion">Ubicación y Horario del Evento</h2>
                     <h2 class="nameUbica">Invierte y reside en Estados Unidos ¡Descubre el camino a través de
                         las visas E2 y EB2-NIW!</h2>
-                    <p><span class="spanUbica">FECHA DEL EVENTO: </span>miércoles 3 de abril</p>
-                    <p><span class="spanUbica">HORA DEL EVENTO: </span>18:00 p.m. 20:30 p.m.</p>
-                    <p><span class="spanUbica">LUGAR DEL EVENTO: </span>Hotel Estelar la Fontana</p>
+                    <p><span class="spanUbica">FECHA: </span>miércoles 3 de abril</p>
+                    <p><span class="spanUbica">HORA: </span>18:00 p.m. 20:30 p.m.</p>
+                    <p><span class="spanUbica">LUGAR: </span>Hotel Estelar la Fontana</p>
 
                 </div>
                 <div class="cnt-map">
@@ -252,7 +252,7 @@
                                 <input class="form-check-input" type="radio" name="tipoInversion" id="activo"
                                     value="Activo" required>
                                 <label class="form-check-label" for="activo">
-                                    Activo (Sociedades que generen empleo y ofrecen vida de residencia)
+                                    Activo (Sociedades que generen empleo y ofrecen visa de residencia)
                                 </label>
                             </div>
                             <div class="form-check">
