se cambia diseño del banner

--- a/index.html
+++ b/index.html
@@ -18,8 +18,19 @@
         <main>
             <section class="sectionOne">
                 <div class="cnt-general">
-                    <h1 class="titleH1">Haz realidad tu inversión en Estados Unidos: Visas E2 y EB2-NIW</h1>
+                    <div>
+                        <h1 class="titleH1">INVIERTE Y RESIDE EN ESTADOS UNIDOS</h1>
+                    </div>
+                    <div class="cnt-estrellas">
+                        <img class="estrellas" src="./img/estrella.webp">
+                        <img class="estrellas" src="./img/estrella.webp">
+                        <img class="estrellas" src="./img/estrella.webp">
+                        <img class="estrellas" src="./img/estrella.webp">
+                        <img class="estrellas" src="./img/estrella.webp">
+                        <img class="estrellas" src="./img/estrella.webp">
+                    </div>
                 </div>
+
             </section>
             <section class="conteo">
                 <div class="cntH2conteo">
@@ -58,14 +69,15 @@
                     <div class="caja1 caja">
                         <p class="titleCaja">Para quién es este evento:</p>
                         <ol>
-                            <li><i class="bi bi-check-circle-fill"></i>Inversores</li>
+                            <li><i class="bi bi-check-circle-fill"></i>Inversionistas de franquicias</li>
                             <li><i class="bi bi-check-circle-fill"></i>Profesionales cualificados</li>
                         </ol>
                     </div>
                     <div class="caja2 caja">
                         <p class="titleCaja">Temas a tratar:</p>
                         <ol>
-                            <li><i class="bi bi-check-circle-fill"></i>Residencia en EE.UU.</li>
+                            <li><i class="bi bi-check-circle-fill"></i>Visa a través de franquicias
+                            </li>
                             <li><i class="bi bi-check-circle-fill"></i>Oportunidades de inversión en EE.UU.</li>
                             <li><i class="bi bi-check-circle-fill"></i>VISA E-2</li>
                             <li><i class="bi bi-check-circle-fill"></i>VISA EB2/NIW</li>
@@ -104,25 +116,15 @@
                                     <div id="collapseOne" class="accordion-collapse collapse"
                                         data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            Carlos Murcia, emprendedor visionario en la vanguardia de los negocios
-                                            digitales y
-                                            la tecnología. Fundó Puff Cleaning and Repair Holdings LLC, liderando el
-                                            mercado con
-                                            soluciones digitales innovadoras y es el General Manager de FLO CAR RENTAL,
-                                            donde su
-                                            enfoque en la satisfacción del cliente a través de plataformas digitales
-                                            brilla en
-                                            la industria automotriz. Formado en administración y finanzas por la
-                                            Universidad
-                                            Politécnico Gran Colombiano, ha dedicado su carrera a la mejora de servicios
-                                            con
-                                            tecnología. Recientemente, su talento lo llevó a EE.UU., donde obtuvo la
-                                            visa E2 por
-                                            sus proyectos disruptivos. Con un don para captar oportunidades y
-                                            desarrollar
-                                            estrategias de negocio, atrae a inversores latinoamericanos interesados en
-                                            expandir
-                                            sus franquicias en EE.UU.
+                                            Carlos Murcia: emprendedor colombiano, visionario en los negocios digitales
+                                            y la innovación tecnológica. Ha dedicado su vida profesional a diversas
+                                            facetas del mercado de valores, estructuración de deuda y proyectos de
+                                            infraestructura en Colombia.<br>
+
+                                            <br>Con una formación en administración de empresas y amplia experiencia
+                                            financiera y comercial, Carlos se destaca como fundador de Puff Cleaning and
+                                            Repair Holdings LLC y Flo Car Rental, dos casos de emprendimientos exitosos,
+                                            con gran nivel de expansión en el escenario global.
                                         </div>
                                     </div>
                                 </div>
@@ -154,27 +156,15 @@
                                     <div id="collapseTwo" class="accordion-collapse collapse"
                                         data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            Adriana Soto Ospina, Emprendedora Colombiana en el ámbito de los negocios
-                                            digitales
-                                            y telesalud, es la fundadora de Maternal+ empresa que se dedica a ayudar a
-                                            mujeres
-                                            latinas a mejorar los resultados del embarazo y el posparto, disminuyendo
-                                            costos al
-                                            sistema de salud y es la CEO de VisaHub.
-                                            Emigró a Estados Unidos hace 2 años y logró aplicar y ser aprobada para la
-                                            visa
-                                            EB2-NIW utilizando el mismo emprendimiento que inició en Colombia, todo ello
-                                            sin el
-                                            apoyo legal de ningún abogado, su empresa en poco tiempo ha ganado
-                                            reconocimiento de
-                                            parte de inversores de diversas industrias en USA, actualmente opera en
-                                            Texas y
-                                            California, estableciendo convenios con entidades privadas y gubernamentales
-                                            de
-                                            Estados Unidos. Ahora, con VisaHub, apuesta por democratizar el acceso a la
-                                            migración profesional para los latinos en USA, por menos de una tercera
-                                            parte de los
-                                            que cuesta con un abogado.
+                                            Adriana Soto Ospina: emprendedora Colombiana en el ámbito de los negocios
+                                            digitales y telesalud. Fundadora de Maternal+, empresa dedicada a ayudar a
+                                            mujeres latinas a mejorar los resultados del embarazo y el posparto,
+                                            disminuyendo costos al sistema de salud. Actualmente se desempeña como CEO
+                                            de VisaHub.
+
+                                            Conozca más de la historia de éxito de Adriana y detalles de su aprobación
+                                            de la visa EB2-NIW <a href="https://bit.ly/3Txpy9S" target="_blank">conocer
+                                                historia</a>
                                         </div>
                                     </div>
                                 </div>
